<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- intro strings -->

    <string name="app_name">Remedy</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="ask_qut_login">Already have an account? Login</string>
    <string name="doesn_t_have_an_account__signup_string">Doesnt have an account? Signup</string>
    <string name="welcome_to_remedy_string">Welcome to Remedy</string>
    <string name="welcome_back__string">Welcome Back!</string>
    <string name="intro_msg">Your Path to Inner Balance and Peace. Your mental well-being is our priority, and our innovative platform is here to provide you with personalized support. Let us be your remedy for a healthier mind.</string>
    <string name="i_agree_to_terms_and_conditions_string">I agree to terms and conditions</string>
    <string name="continue_your_calmness_journey_string">Continue your calmness journey</string>
    <string name="confirm_password_string">Confirm Password</string>
    <string name="password_string">Password</string>
    <string name="forgot_password__string">Forgot Password?</string>

    <string name="phone_number_string">Phone Number</string>
    <string name="gender_string">Gender</string>
    <string name="age_string">Age</string>
    <string name="your_name_string">Your Name</string>
    <string name="_5_40_string">5:40 </string>

    <string name="let_us_be_your_remedy_string">Let us be your Remedy</string>
    <string name="create_a_new_account_string">Create a new account</string>
    <string name="or_string">Or</string>
    <string name="sign_up_ek3_string">Sign Up</string>
    <string name="as_a_doctor_string">As a Doctor</string>
    <string name="as_a_client_string">As a Client</string>
    <string name="label_text_string">Create Account</string>
<string name="get_started_string">Get Started</string>
    <string name="we_hope_you_are_having_a_great_day_string">We hope you are having a great day</string>
    <string name="hi__i_m_remedy___string">Hi, Im Remedy !</string>
    <string name="let_us_be_your_remedy___string">Let us be your Remedy !</string>
    <string name="here__is_your_daily_inspiration_string">Here, is your Daily Inspiration</string>
    <string name="explore_remedy_string">Explore Remedy </string>
    <string name="ai_chatbot_string">AI Chatbot</string>
    <string name="breathing_exercises_string">Breathing Exercises </string>
    <string name="to_do_list_string">To Do List</string>
    <string name="hello_jimin__string">Hello Jimin!</string>
    <string name="__when_things_get_hard__stop_for_awhile_and_look_back_and_see_how_far_you_ve_come__string">"When things get hard, stop for awhile and look back and see how far youve come"</string>
    <string name="therapist_string">Therapist</string>
    <string name="meditation_string">Meditation</string>
    <string name="music_therapy_string">MusicTherapy</string>
    <string name="title_activity_remedy_navigation_drawer">RemedyNavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Yoshani Jayakodi</string>
    <string name="nav_header_subtitle">Std: No:2021t01210</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_Logout">Logout</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>





<string name="username_string">Username </string>
	<string name="jimin_string">Jimin</string>
	<string name="bio_string">Bio</string>
	<string name="life_goes_on_string">Life Goes On</string>
	<string name="name_string">Name</string>
	<string name="park_jimin_string">Park Jimin</string>
	<string name="date_of_birth_string">Date of Birth</string>
	<string name="birth_string">13.10.1995</string>
	<string name="contact_string">Contact</string>
	<string name="phone_string">+94 777136991</string>
	<string name="email_string">Email</string>
	<string name="jm13mochi_gmail_com_string">jm13mochi@gmail.com</string>
	<string name="user_profile_string">User Profile</string>
</resources>