<!--<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"-->
<!--	android:layout_width="match_parent" android:layout_height="wrap_content" >-->

<!--	<ScrollView android:id="@+id/sign_up" -->
<!--		android:layout_width="wrap_content" -->
<!--		android:layout_height="match_parent" >-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/content_container"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/_bg__sign_in_ek2_shape">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:fillViewport="true">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="0dp">
			<RelativeLayout
				android:id="@+id/page_sign_in_ek1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="0dp"
				android:layout_marginTop="0dp"
				android:background="@drawable/_bg__sign_in_ek2_shape">


				<View
					android:id="@+id/rectangle_4"
					android:layout_width="match_parent"
					android:layout_height="563dp"
					android:layout_marginStart="0dp"
					android:layout_marginTop="268dp"
					android:background="@drawable/rectangle_4_shape" />

				<CheckBox
					android:id="@+id/agree_checkbox"

					android:layout_width="30dp"
					android:layout_height="30dp"


					android:layout_below="@id/image_15"
					android:layout_marginStart="15dp"
					android:layout_marginTop="12dp" />

				<TextView
					android:id="@+id/i_agree_to_terms_and_conditions"
					android:layout_width="311.5dp"
					android:layout_height="30.5dp"
					android:layout_below="@id/image_13"
					android:layout_alignParentEnd="true"
					android:layout_marginStart="10dp"
					android:layout_marginLeft="25dp"
					android:layout_marginTop="12dp"
					android:layout_marginEnd="15dp"

					android:layout_toRightOf="@id/agree_checkbox"
					android:fontFamily="Roboto"
					android:text="@string/i_agree_to_terms_and_conditions_string"
					android:textColor="@color/i_agree_to_terms_and_conditions_color"
					android:textSize="16sp" />


				<EditText
					android:id="@+id/confirm_password"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@id/password"
					android:layout_marginStart="15dp"
					android:layout_marginLeft="37dp"
					android:layout_marginTop="12dp"
					android:layout_marginEnd="15dp"

					android:background="@drawable/btn_corner_round"
					android:fontFamily="Roboto"
					android:gravity="center_vertical"
					android:hint="Confirm Password"

					android:inputType="textPassword"
					android:paddingStart="5dp"
					android:paddingTop="12dp"
					android:paddingBottom="12dp"
					android:textColor="@color/i_agree_to_terms_and_conditions_color"
					android:textColorHint="@color/purple_200"
					android:textSize="16sp" />


				<EditText
					android:id="@+id/password"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@id/email"
					android:layout_marginStart="15dp"
					android:layout_marginLeft="37dp"
					android:layout_marginTop="12dp"
					android:layout_marginEnd="15dp"
					android:background="@drawable/btn_corner_round"
					android:fontFamily="Roboto"
					android:gravity="center_vertical"
					android:hint="@string/password_string"

					android:inputType="textPassword"
					android:paddingStart="5dp"
					android:paddingTop="12dp"
					android:paddingBottom="12dp"
					android:textColor="@color/i_agree_to_terms_and_conditions_color"
					android:textColorHint="@color/purple_200"
					android:textSize="16sp" />


				<EditText
					android:id="@+id/email"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@id/phone_number"

					android:layout_marginStart="15dp"
					android:layout_marginLeft="37dp"
					android:layout_marginTop="12dp"
					android:layout_marginEnd="15dp"
					android:layout_weight="1"
					android:background="@drawable/btn_corner_round"
					android:fontFamily="Roboto"
					android:gravity="center_vertical"

					android:hint="@string/email_string"
					android:paddingStart="5dp"
					android:paddingTop="12dp"
					android:paddingBottom="12dp"
					android:textColor="@color/i_agree_to_terms_and_conditions_color"
					android:textColorHint="@color/purple_200"
					android:textSize="16sp" />


				<EditText
					android:id="@+id/phone_number"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@id/gender"
					android:layout_marginStart="15dp"
					android:layout_marginLeft="37dp"
					android:layout_marginTop="12dp"
					android:layout_marginEnd="15dp"
					android:layout_weight="1"
					android:background="@drawable/btn_corner_round"
					android:fontFamily="Roboto"
					android:gravity="center_vertical"
					android:hint="@string/phone_number_string"
					android:inputType="number"
					android:paddingStart="5dp"
					android:paddingTop="12dp"
					android:paddingBottom="12dp"
					android:textColor="@color/i_agree_to_terms_and_conditions_color"
					android:textColorHint="@color/purple_200"
					android:textSize="16sp" />

				<Spinner
					android:id="@+id/gender"

					android:layout_width="50dp"
					android:layout_height="wrap_content"
					android:layout_below="@id/your_name"
					android:layout_alignParentEnd="true"
					android:layout_marginStart="20dp"


					android:layout_marginLeft="37dp"
					android:layout_marginTop="12dp"
					android:layout_marginEnd="15dp"
					android:layout_toRightOf="@id/age"
					android:background="@drawable/btn_corner_round"
					android:paddingTop="12dp"
					android:paddingEnd="15dp"
					android:paddingBottom="12dp"
					android:spinnerMode="dropdown" />


				<EditText
					android:id="@+id/age"
					android:layout_width="131dp"
					android:layout_height="wrap_content"
					android:layout_below="@id/your_name"
					android:layout_alignParentStart="true"
					android:layout_marginStart="15dp"
					android:layout_marginLeft="37dp"
					android:layout_marginTop="12dp"
					android:layout_marginEnd="10dp"
					android:layout_weight="1"
					android:background="@drawable/btn_corner_round"
					android:fontFamily="Roboto"
					android:hint="@string/age_string"
					android:inputType="number"
					android:paddingStart="5dp"
					android:paddingTop="12dp"
					android:paddingBottom="12dp"
					android:textColor="@color/i_agree_to_terms_and_conditions_color"
					android:textColorHint="@color/purple_200"
					android:textSize="16sp" />


				<EditText
					android:id="@+id/your_name"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@id/create_a_new_account"
					android:layout_marginStart="15dp"
					android:layout_marginLeft="37dp"
					android:layout_marginTop="12dp"
					android:layout_marginEnd="15dp"
					android:layout_weight="1"
					android:background="@drawable/btn_corner_round"
					android:fontFamily="Roboto"
					android:gravity="center_vertical"
					android:hint="@string/your_name_string"
					android:paddingTop="12dp"
					android:paddingBottom="12dp"
					android:textColor="@color/i_agree_to_terms_and_conditions_color"
					android:textColorHint="@color/purple_200"
					android:textSize="16sp"
					android:paddingStart="5dp" />

	<!--				</RelativeLayout>-->

	<ImageView
		android:id="@+id/image_14"
		android:layout_width="242dp"
		android:layout_height="244dp"
		android:layout_marginStart="72dp"
		android:layout_marginTop="24dp"
		android:contentDescription="image_14"
		android:src="@drawable/image_14" />


				<TextView
					android:id="@+id/already_have_an_account__login"
					android:layout_width="341dp"
					android:layout_height="28.5dp"
					android:layout_below="@id/btn_create_account"
					android:layout_gravity="center_horizontal|center"
					android:layout_marginLeft="26dp"
					android:layout_marginTop="10dp"
					android:fontFamily="Roboto"
					android:gravity="center"
					android:text="@string/ask_qut_login"
					android:textColor="@color/i_agree_to_terms_and_conditions_color"
					android:textSize="16sp" />

				<TextView
					android:id="@+id/create_a_new_account"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@+id/image_14"
					android:layout_marginStart="15dp"
					android:layout_marginLeft="48dp"
					android:layout_marginTop="9dp"
					android:layout_marginEnd="15dp"
					android:fontFamily="Roboto"
					android:text="@string/create_a_new_account_string"
					android:textColor="@color/i_agree_to_terms_and_conditions_color"
					android:textSize="16sp" />

				<TextView
					android:id="@+id/or"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@id/confirm_password"
					android:layout_alignParentStart="true"
					android:layout_alignParentEnd="true"
					android:layout_gravity="center_horizontal|center"
					android:layout_marginStart="15dp"
					android:layout_marginLeft="26dp"
					android:layout_marginTop="10dp"
					android:layout_marginEnd="15dp"
					android:fontFamily="Roboto"
					android:gravity="center"
					android:text="@string/or_string"
					android:textColor="@color/i_agree_to_terms_and_conditions_color"
					android:textSize="16sp" />

	<TextView
		android:id="@+id/sign_up_ek3"
		android:layout_width="84dp"
		android:layout_height="40dp"
		android:layout_gravity="center_horizontal|center"
		android:layout_marginLeft="45dp"
		android:layout_marginTop="40dp"
		android:fontFamily="Poppins"
		android:gravity="center"
		android:text="@string/sign_up_ek3_string"
		android:textColor="@color/i_agree_to_terms_and_conditions_color"
		android:textSize="18sp"
		android:textStyle="bold" />


				<ImageView
					android:id="@+id/image_13"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_below="@id/or"
					android:layout_marginStart="150dp"
					android:layout_marginTop="4dp"
					android:contentDescription="image_13"
					android:src="@drawable/image_13" />

				<ImageView
					android:id="@+id/image_14_ek1"
					android:layout_width="wrap_content"
					android:layout_height="21.57dp"
					android:layout_below="@id/or"
					android:layout_marginStart="10dp"
					android:layout_marginTop="4dp"
					android:layout_toRightOf="@id/image_13"
					android:contentDescription="image_14_ek1"
					android:src="@drawable/image_14_ek1" />

				<ImageView
					android:id="@+id/image_15"
					android:layout_width="20dp"
					android:layout_height="wrap_content"
					android:layout_below="@id/or"
					android:layout_marginStart="0dp"
					android:layout_marginLeft="20dp"
					android:layout_marginTop="0dp"
					android:layout_toRightOf="@id/image_14_ek1"
					android:contentDescription="image_15"
					android:src="@drawable/image_15" />


				<Button
					android:id="@+id/btn_create_account"
					android:layout_width="match_parent"
					android:layout_height="45dp"
					android:layout_below="@id/i_agree_to_terms_and_conditions"
					android:layout_alignParentStart="true"
					android:layout_alignParentEnd="true"
					android:layout_gravity="center_horizontal|center"
					android:layout_marginStart="110dp"
					android:layout_marginLeft="1.5dp"
					android:layout_marginTop="10dp"
					android:layout_marginEnd="120dp"
					android:background="@drawable/btn_corner_round"
					android:backgroundTint="@color/_bg__user_info_ek2_color"
					android:fontFamily="Roboto"
					android:gravity="center"
					android:paddingStart="20dp"
					android:paddingEnd="20dp"
					android:text="Create"
					android:textColor="@color/white"
					android:textSize="16sp"
					android:textStyle="bold" />

			</RelativeLayout>
		</LinearLayout>
	</ScrollView>
</RelativeLayout>

