<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >

	<ScrollView android:id="@+id/user_info" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_user_info_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__user_info_ek2"
					android:background="@drawable/_bg__user_info_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="385dp"
					android:layout_height="800dp" />

				<View   android:id="@+id/rectangle_11"
					android:background="@drawable/rectangle_11_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="157dp"
					android:layout_width="385dp"
					android:layout_height="585dp" />

				<TextView android:id="@+id/username"
					android:fontFamily="Roboto"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="15sp"
					android:textColor="@color/_bg__user_info_ek2_color"
					android:layout_marginLeft="156dp"
					android:layout_marginTop="278dp"
					android:layout_width="81dp"
					android:layout_height="30.5dp"
					android:text="@string/username_string"
					 />

				<TextView android:id="@+id/txt_user_name"
					android:fontFamily="Roboto"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="15sp"
					android:textColor="@color/_bg__user_info_ek2_color"
					android:layout_marginLeft="172dp"
					android:layout_marginTop="294dp"
					android:layout_width="50dp"
					android:layout_height="33.5dp"
					android:text=""
					 />

				<TextView android:id="@+id/bio"
					android:fontFamily="Roboto"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="15sp"
					android:textColor="@color/_bg__user_info_ek2_color"
					android:layout_marginLeft="179dp"
					android:layout_marginTop="332dp"
					android:layout_width="35dp"
					android:layout_height="30.5dp"
					android:text="@string/bio_string"
					 />

				<TextView android:id="@+id/life_goes_on"
					android:fontFamily="Roboto"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="15sp"
					android:textColor="@color/_bg__user_info_ek2_color"
					android:layout_marginLeft="148dp"
					android:layout_marginTop="348dp"
					android:layout_width="98dp"
					android:layout_height="33.5dp"
					android:text="@string/life_goes_on_string"
					 />

				<TextView android:id="@+id/name"
					android:fontFamily="Roboto"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="15sp"
					android:textColor="@color/_bg__user_info_ek2_color"
					android:layout_marginLeft="170dp"
					android:layout_marginTop="386dp"
					android:layout_width="53dp"
					android:layout_height="30.5dp"
					android:text=""
					 />

				<TextView android:id="@+id/park_jimin"
					android:fontFamily="Roboto"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="15sp"
					android:textColor="@color/_bg__user_info_ek2_color"
					android:layout_marginLeft="155dp"
					android:layout_marginTop="402dp"
					android:layout_width="84dp"
					android:layout_height="33.5dp"
					android:text=""
					 />

				<TextView android:id="@+id/date_of_birth"
					android:fontFamily="Roboto"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="15sp"
					android:textColor="@color/_bg__user_info_ek2_color"
					android:layout_marginLeft="148dp"
					android:layout_marginTop="440dp"
					android:layout_width="97dp"
					android:layout_height="30.5dp"
					android:text=""
					 />

				<TextView android:id="@+id/birth_string"
					android:fontFamily="Roboto"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="15sp"
					android:textColor="@color/_bg__user_info_ek2_color"
					android:layout_marginLeft="153dp"
					android:layout_marginTop="456dp"
					android:layout_width="88dp"
					android:layout_height="33.5dp"
					android:text=""
					 />

				<TextView android:id="@+id/contact"
					android:fontFamily="Roboto"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="15sp"
					android:textColor="@color/_bg__user_info_ek2_color"
					android:layout_marginLeft="164dp"
					android:layout_marginTop="548dp"
					android:layout_width="66dp"
					android:layout_height="30.5dp"
					android:text="@string/contact_string"
					 />

				<TextView android:id="@+id/phone_no"
					android:fontFamily="Roboto"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="15sp"
					android:textColor="@color/_bg__user_info_ek2_color"
					android:layout_marginLeft="138dp"
					android:layout_marginTop="564dp"
					android:layout_width="118dp"
					android:layout_height="33.5dp"
					android:text=""
					 />

				<TextView android:id="@+id/email"
					android:fontFamily="Roboto"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="15sp"
					android:textColor="@color/_bg__user_info_ek2_color"
					android:layout_marginLeft="171dp"
					android:layout_marginTop="494dp"
					android:layout_width="51dp"
					android:layout_height="30.5dp"
					android:text="@string/email_string"
					 />

				<TextView android:id="@+id/txt_email"
					android:fontFamily="Roboto"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="15sp"
					android:textColor="@color/_bg__user_info_ek2_color"
					android:layout_marginLeft="111dp"
					android:layout_marginTop="510dp"
					android:layout_width="171dp"
					android:layout_height="33.5dp"
					android:text=""
					 />

				<ImageView android:id="@+id/ellipse_87"
					android:src="@drawable/ellipse_87"
					android:contentDescription="ellipse_87"
					 android:layout_marginStart="106dp"
					android:layout_marginTop="89dp"
					android:layout_width="174dp"
					android:layout_height="174dp" />

				<TextView android:id="@+id/user_profile"
					android:fontFamily="Poppins"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="18sp"
					android:textColor="@color/user_profile_color"
					android:layout_marginLeft="53dp"
					android:layout_marginTop="36dp"
					android:layout_width="122dp"
					android:layout_height="32dp"
					android:text="@string/user_profile_string"
					 />

				<View   android:id="@+id/ellipse_88"
					android:background="@drawable/ellipse_88_shape"
					 android:layout_marginStart="87dp"
					android:layout_marginTop="74dp"
					android:layout_width="214dp"
					android:layout_height="214dp" />

			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>