
		<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:id="@+id/content_container"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >

			<ScrollView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:fillViewport="true">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:padding="0dp">
			<RelativeLayout
				android:id="@+id/page_sign_in_ek1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="0dp"
				android:layout_marginTop="0dp"
				android:background="@drawable/_bg__sign_in_ek2_shape">

				<View
					android:id="@+id/rectangle_3"
					android:layout_width="385dp"
					android:layout_height="350dp"
					android:layout_below="@id/image_photoroom_2"
					android:layout_alignParentStart="true"
					android:layout_alignParentEnd="true"
					android:layout_marginStart="0dp"
					android:layout_marginTop="5dp"
					android:layout_marginEnd="0dp"
					android:background="@drawable/rectangle_3_shape" />

				<TextView
					android:id="@+id/txt_link_to_signup"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@id/btn_signin"
					android:layout_gravity="center_horizontal|center"
					android:layout_marginStart="20dp"
					android:layout_marginLeft="26dp"
					android:layout_marginTop="20dp"
					android:layout_marginEnd="20dp"
					android:layout_marginBottom="77dp"
					android:fontFamily="Roboto"
					android:gravity="center"
					android:text="@string/doesn_t_have_an_account__signup_string"
					android:textColor="@color/doesn_t_have_an_account__signup_color"
					android:textSize="15sp" />

				<ImageView
					android:id="@+id/image_photoroom_2"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_below="@id/welcome_back_"
					android:layout_alignParentStart="true"
					android:layout_alignParentEnd="true"
					android:layout_marginStart="51dp"
					android:layout_marginTop="10dp"
					android:layout_marginEnd="52dp"
					android:contentDescription="image_photoroom_2"
					android:src="@drawable/image_photoroom_2" />


				<TextView
					android:id="@+id/welcome_back_"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_alignParentStart="true"
					android:layout_alignParentTop="true"
					android:layout_alignParentEnd="true"
					android:layout_gravity="center_horizontal|center"
					android:layout_marginStart="20dp"
					android:layout_marginLeft="45dp"
					android:layout_marginTop="40dp"
					android:layout_marginEnd="20dp"
					android:fontFamily="Poppins"
					android:gravity="center"
					android:text="@string/welcome_back__string"
					android:textColor="@color/doesn_t_have_an_account__signup_color"
					android:textSize="18sp"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/txt_msg"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_alignTop="@+id/rectangle_3"
					android:layout_marginStart="10dp"
					android:layout_marginLeft="48dp"
					android:layout_marginTop="20dp"
					android:layout_marginEnd="10dp"
					android:fontFamily="Roboto"
					android:text="@string/continue_your_calmness_journey_string"
					android:textColor="@color/doesn_t_have_an_account__signup_color"
					android:textSize="15sp" />


				<EditText
					android:id="@+id/email"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@id/txt_msg"
					android:layout_marginStart="30dp"
					android:layout_marginLeft="37dp"
					android:layout_marginTop="12dp"
					android:layout_marginEnd="30dp"
					android:layout_weight="1"
					android:background="@drawable/btn_corner_round"
					android:drawableLeft="@drawable/vector_ek2"
					android:fontFamily="Roboto"
					android:gravity="center_vertical"
					android:hint="@string/email_string"
					android:paddingStart="5dp"
					android:paddingTop="12dp"
					android:paddingEnd="5dp"
					android:paddingBottom="12dp"
					android:textColor="@color/doesn_t_have_an_account__signup_color"
					android:textColorHint="@color/purple_200"
					android:textSize="16sp" />







				<EditText
					android:id="@+id/password"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@id/email"
					android:layout_marginStart="30dp"
					android:layout_marginLeft="37dp"
					android:layout_marginTop="12dp"
					android:layout_marginEnd="30dp"
					android:layout_weight="1"
					android:gravity="center_vertical"
					android:background="@drawable/btn_corner_round"
					android:drawableLeft="@drawable/vector_ek4"
					android:drawableRight="@drawable/vector_ek3"
					android:fontFamily="Roboto"
					android:hint="Password"
					android:textColor="@color/doesn_t_have_an_account__signup_color"
					android:textColorHint="@color/purple_200"
					android:textSize="16sp"
					android:paddingStart="5dp"
					android:paddingTop="12dp"
					android:paddingEnd="5dp"
					android:paddingBottom="12dp"
					android:inputType="textPassword"/>

<!--					</RelativeLayout>-->

<!--				</RelativeLayout>-->
				<Button
					android:id="@+id/btn_signin"
					android:layout_width="200dp"
					android:layout_height="45dp"
					android:layout_below="@id/password"
					android:layout_alignParentStart="true"
					android:layout_alignParentEnd="true"
					android:layout_gravity="center_horizontal|center"
					android:layout_marginStart="96dp"
					android:layout_marginLeft="13.5dp"
					android:layout_marginTop="30dp"
					android:layout_marginEnd="96dp"
					android:background="@drawable/btn_corner_round"
					android:backgroundTint="@color/_bg__user_info_ek2_color"
					android:fontFamily="Roboto"
					android:gravity="center"
					android:text="Login"
					android:textColor="@color/white"
					android:textSize="18sp"
					android:textStyle="bold" />

			</RelativeLayout>
			</LinearLayout>
			</ScrollView>
		</RelativeLayout>

